# openvino_pytorch_layers

./: README.md  compare.py  export_model.py  requirements.txt  run_tests.py  setup.py  unpool.py
.github/workflows/: main.yml
examples/calculate_grid/: calculate_grid.py
examples/complex_mul/: complex_mul.py  export_model.py
examples/deformable_conv/: deformable_conv.py  export_model.py
examples/fft/: export_model.py  export_model_with_roll.py  fft.py
examples/grid_sample/: export_model.py
examples/lstsq/: export_model.py  lstsq.py
examples/sparse_conv/: export_model.py  sparse_conv.py
examples/unpool/: export_model.py
mo_extensions/front/onnx/: complex_mul_ext.py  fft_ext.py  grid_sample_ext.py  max_unpool.py
mo_extensions/ops/: ComplexMultiplication.py  FFT.py  GridSample.py  MaxPoolGrad.py
openvino_extensions/: __init__.py
tests/: requirements.txt  run_tests.py
user_ie_extensions/: CMakeLists.txt  calculate_grid_impl.cpp  calculate_grid_op.cpp  complex_mul.cpp  complex_mul_impl.cpp  complex_mul_op.cpp  cpu_kernel.cpp  cpu_kernel.hpp  ext_max_unpool_2x2.cpp  extension.cpp  fft.cpp  fft.hpp  fft_impl.cpp  fft_op.cpp  gpu_extensions.xml  grid_sample.cpp  grid_sample_impl.cpp  grid_sample_kernel.cl  grid_sample_op.cpp  lstsq_impl.cpp  lstsq_op.cpp  op.cpp  op.hpp  ov_extension.cpp  sparse_conv.cpp  sparse_conv.hpp  sparse_conv_impl.cpp  sparse_conv_op.cpp  sparse_conv_transpose.cpp  sparse_conv_transpose_impl.cpp  sparse_conv_transpose_op.cpp  unpool.cpp  unpool.hpp  unpool_impl.cpp
